--- a/JS-03-26/index.html
+++ b/JS-03-26/index.html
@@ -15,7 +15,7 @@
         <div class="col-md-3">
             <div class="card custom-bg">
                 <div class="card-header bg-transparent">
-                    <p class="text-center fs-3">KMI skaičiuokle</p>
+                    <h1 class="text-center fs-3">KMI skaičiuokle</h1>
                 </div>
                 <div class="card-body">
                     <div class="mb-2">
@@ -31,7 +31,7 @@
             </div>
             <div class="card mt-2 p-2 custom-bg">
                 <div class="bg-transparent fw-bold">
-                    <span>Rezultatas:</span> <span id="result"></span>
+                    <span>Rezultatas: <span id="result"></span></span>
                 </div>
             </div>
         </div>
