--- a/JS-03-28/darbuotojai.html
+++ b/JS-03-28/darbuotojai.html
@@ -37,8 +37,8 @@
                 <h1 class="card-title fs-3 text-info">Darbuotojų skaičiuoklė</h1>
                 <ul class="list-group">
                     <div class="mt-3 d-flex flex-column gap-2 fw-bold">
-                        <span>Visu darbuotujų atlyginimas: <span id="employeeSum"></span>0</span>
-                        <span>Visu darbuotujų atlyginimo vidurkis: <span id="employeeAvg"></span>0</span>
+                        <span>Visu darbuotujų atlyginimas: <span id="employeeSum"></span></span>
+                        <span>Visu darbuotujų atlyginimo vidurkis: <span id="employeeAvg"></span></span>
                     </div>
                 </ul>
             </div>
