--- a/JS-03-28/darbuotojai.html
+++ b/JS-03-28/darbuotojai.html
@@ -12,7 +12,7 @@
 <body>
     <main class="container">
         <div class="row mt-4 gap-2">
-            <div class="card p-2 col-7">
+            <div class="card p-2 col-md-7 col-12">
                 <h1 class="card-title fs-3 text-primary">Pridėti naujus darbuotojus</h1>
                 <div class="card-body d-flex flex-column">
                     <div>
