--- a/JS-04-03/chronometras.html
+++ b/JS-04-03/chronometras.html
@@ -18,7 +18,7 @@
             <button id="resetBtn" class=" btn btn-dark fs-3 w-25">Atstatyti</button>
         </div>
         <div class="text-center card mt-2">
-            <ul class="list-group" id="newTimer"></ul>
+            <ul class="list-group" id="displayTimer"></ul>
         </div>
     </div>
 </body>
